# music-gen-ai

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACADEMIC_DEPLOYMENT_EXAMPLES.md  ACADEMIC_DISCLAIMER.md  ACCURACY_FIXES_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  BRANCH_ANALYSIS_REPORT.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CLAUDE.md  COMPLETE_SYSTEM_REVIEW.md  COMPLETE_TRANSFORMATION_SUMMARY.md  COMPREHENSIVE_DOCUMENTATION.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  CONTRIBUTING_ACADEMIC.md  CRITICAL_ARCHITECTURE_FIX.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_ACCURACY_REPORT.md  Dockerfile  Dockerfile.academic  Dockerfile.load-test  Dockerfile.production  FINAL_PROJECT_STATE.md  FINAL_RECOMMENDATIONS.md  FINAL_STRATEGIC_SUMMARY.md  FINAL_SUMMARY.md  GITHUB_ACTIONS_STATUS.md  IMMEDIATE_ACTIONS.md  IMPLEMENTATION_COMPLETE.md  KNOWN_ISSUES.md  LICENSE  LIMITATIONS.md  LOGGING_FIX_SUMMARY.md  (+69 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test-microservices.yml  test.yml
archive/misleading-analysis/: README.md  SECURITY_FEATURES_ANALYSIS.md
configs/: api_bridge.py  config.yaml  development.yaml  example.yaml  nginx-production.conf  production.yaml  prometheus.yml  rate_limiting.yaml  testing.yaml
configs/app/: base.yaml  development.yaml  production.yaml  staging.yaml
configs/data/: musiccaps.yaml  synthetic.yaml
configs/inference/: base.yaml  beam_search.yaml  high_quality.yaml
configs/logging/: elasticsearch-template.json  elasticsearch.yml  fluentd.conf  logrotate.conf  logstash.conf  otel-collector.yaml  systemd-log-management.service
configs/model/: base.yaml  large.yaml  small.yaml
configs/monitoring/: prometheus-staging.yml  prometheus.yml
configs/streaming/: default.yaml  high_quality.yaml  low_latency.yaml
configs/training/: base.yaml  debug.yaml  production.yaml
demo_jazz_duo/: metadata.json
deployment/docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
deployment/kubernetes/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
docker/: Dockerfile  docker-compose.staging.yml  docker-compose.workers.yml
docs/: PERFORMANCE_OPTIMIZATION_GUIDE.md  SECURITY_FIXES_SUMMARY.md  STRUCTURED_LOGGING_IMPLEMENTATION.md  WEEKLY_REFLECTION_TEMPLATE.md  auth_migration_guide.md  celery_worker_documentation.md  config_quick_reference.md  configuration.md  cors_client_examples.md  cors_configuration.md  dependency_audit_report.md  index.md  rate_limiting_guide.md  redis_task_storage_configuration.md  resource_management_guide.md  resource_management_implementation_report.md  secret_dependencies.md  secrets_backup_procedures.md
docs/api/: CHANGELOG.md  README.md  authentication.md  interactive-docs.md  openapi_spec.yaml  rate-limiting.md
docs/archive/: DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER_DEMO_STATUS.md  QUICK_FIX.md
docs/cs109b/: README.md
docs/deployment/: DEPLOYMENT_GUIDE.md  README.md
examples/: __init__.py  advanced_features.py  basic_usage.py  batch_processing.py  minimal_musicgen.py
frontend/: jest.config.js  next.config.js  package.json  tailwind.config.js  webpack.mobile.config.js
frontend/src/: setupTests.ts
infrastructure/docker/: docker-compose.microservices.yml
infrastructure/kubernetes/: gateway-service.yaml  namespace.yaml
k8s/: README.md  autoscaling.yaml  configmap.yaml  deployment.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  pvc.yaml  security.yaml  service.yaml
kubernetes/: workers-deployment.yaml
music_gen/: __init__.py  cli.py
music_gen/advanced/: __init__.py  composition.py  conditioning.py  mixing_mastering.py  music_theory.py  quality_assurance.py  realtime_control.py  style_transfer.py
music_gen/api/: app.py  cors_config.py  deps.py  main.py  multi_instrument_api.py  openapi_schema.py  streaming_api.py
music_gen/application/: __init__.py
music_gen/configs/: __init__.py  config.py
music_gen/core/: __init__.py  cache.py  config.py  config_manager.py  config_models.py  container.py  exceptions.py  logging_config.py  memory_optimizer.py  model_manager.py  resource_manager.py  secrets_manager.py
music_gen/data/: __init__.py  augmentation.py  datasets.py
music_gen/evaluation/: __init__.py  metrics.py
music_gen/generation/: __init__.py  beam_search.py
music_gen/models/: __init__.py  encoders.py  musicgen.py
music_gen/monitoring/: __init__.py  alerting.py  metrics.py  sli_slo.py
music_gen/optimization/: __init__.py  fast_generator.py  model_cache.py
music_gen/streaming/: __init__.py  audio_streamer.py  generator.py  session.py  utils.py
musicgen-minimal/: CHANGELOG.md  README.md  VOCALGEN_DOCUMENTATION.md
nginx/: staging.conf
scripts/: backup_restore_test.py  check_requirements.py  check_status.sh  cleanup_codebase.py  cleanup_project.py  code_quality_audit.py  code_quality_review.py  config_cli.py  data_migration_test.py  deploy_production.sh  deploy_staging_complete.sh  download_models.py  emergency_docker_fix.sh  evaluate.py  generate_api_docs.py  generate_ssl_certs.sh  generate_weekly_report.py  git_best_practices.py  integration_test_suite.py  migrate_tasks_to_redis.py  model_manager_complete_test_suite.py  model_manager_performance_report.py  model_manager_performance_simple.py  musicgen-log-manager.sh  mutation_testing.py  orchestrate_48h_load_test.py  performance_profiler.py  phase1_cleanup.py  profile_performance.py  quick_fix_and_test.py  reorganize_to_production.py  rollback_plan.py  run_native_advanced.sh  run_native_no_docker.sh  run_quality_checks.sh  secrets_cli.py  security_audit.py  security_penetration_test.py  setup.sh  simple_mutation_test.py  (+23 more)
services/: __init__.py
tests/: conftest.py  test_augmentation.py  test_auth_middleware.py  test_basic.py  test_basic_import.py  test_beam_search.py  test_complete_system.py  test_cors_auth_integration.py  test_cors_config.py  test_cors_security.py  test_mixing_engine.py  test_multi_instrument.py  test_streaming.py
(+418 files in other folders)
